@@ -1,5 +1,6 @@
 2010-06-17	Ralf Corsépius <ralf.corsepius@rtems.org>
 
+	* libfs/src/rfs/rtems-rfs-bitmaps-ut.c: Various 64bit fixes.
 	* libfs/src/rfs/rtems-rfs-group.c: Various 64bit fixes.
 
 2010-06-16	Joel Sherrill <joel.sherrilL@OARcorp.com>
